// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Canonical Articles Gist list item should match text 1`] = `"Lorem ipsum dolor sit amet, consectetur adipiscing elit."`;

exports[`Canonical Articles Gist title should match text 1`] = `"Points clés"`;

exports[`Canonical Articles Media Loader a11y assistive technology can read the media player title 1`] = `"Play video, ""มหาวิหารน้ำแข็ง" สถาปัตยกรรมงดงามที่ธรรมชาติรังสรรค์ในสวิตเซอร์แลนด์", Durée 0,30"`;

exports[`Canonical Articles Media Loader renders a figure caption 1`] = `
<div
  class="css-145siv3"
  data-e2e="media-loader__placeholder"
>
  <div
    class="css-1qgypv3"
    data-e2e="media-player__guidance"
  >
    <noscript
      class="css-lllaou"
    >
      <strong>
        Pour regarder ce contenu, veuillez activer JavaScript ou essayer un autre navigateur.
      </strong>
    </noscript>
  </div>
  <button
    class="focusIndicatorRemove css-4vlf9b"
    type="button"
  >
    <span
      class="css-m04vo2"
    >
      Play video, ""มหาวิหารน้ำแข็ง" สถาปัตยกรรมงดงามที่ธรรมชาติรังสรรค์ในสวิตเซอร์แลนด์", Durée 0,30
    </span>
    <div
      aria-hidden="true"
      class="css-d0ra4q"
    >
      <svg
        aria-hidden="true"
        class="css-vja2s5 e1s2dgdk5"
        focusable="false"
        height="12"
        viewBox="0 0 12 12"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M.5.6h12v12H.5z"
          />
          <path
            d="M2.144.96v11.28l8.712-5.64z"
            fill="currentColor"
          />
        </g>
      </svg>
    </div>
    <time
      aria-hidden="true"
      class="css-digyti"
      datetime="PT30S"
    >
      00:30
    </time>
  </button>
  <div
    class="css-1jf2q50"
    style="padding-bottom:0;overflow:hidden"
  >
    <img
      alt=""
      class="css-1uq6tv3"
      loading="eager"
      src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01t1jn0.jpg.webp"
      srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01t1jn0.jpg.webp 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01t1jn0.jpg.webp 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01t1jn0.jpg.webp 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01t1jn0.jpg.webp 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01t1jn0.jpg.webp 800w"
      style="aspect-ratio:auto"
    />
  </div>
</div>
`;

exports[`Canonical Articles Media Loader renders a placeholder 1`] = `
<div
  class="css-145siv3"
  data-e2e="media-loader__placeholder"
>
  <div
    class="css-1qgypv3"
    data-e2e="media-player__guidance"
  >
    <noscript
      class="css-lllaou"
    >
      <strong>
        Pour regarder ce contenu, veuillez activer JavaScript ou essayer un autre navigateur.
      </strong>
    </noscript>
  </div>
  <button
    class="focusIndicatorRemove css-4vlf9b"
    type="button"
  >
    <span
      class="css-m04vo2"
    >
      Play video, ""มหาวิหารน้ำแข็ง" สถาปัตยกรรมงดงามที่ธรรมชาติรังสรรค์ในสวิตเซอร์แลนด์", Durée 0,30
    </span>
    <div
      aria-hidden="true"
      class="css-d0ra4q"
    >
      <svg
        aria-hidden="true"
        class="css-vja2s5 e1s2dgdk5"
        focusable="false"
        height="12"
        viewBox="0 0 12 12"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M.5.6h12v12H.5z"
          />
          <path
            d="M2.144.96v11.28l8.712-5.64z"
            fill="currentColor"
          />
        </g>
      </svg>
    </div>
    <time
      aria-hidden="true"
      class="css-digyti"
      datetime="PT30S"
    >
      00:30
    </time>
  </button>
  <div
    class="css-1jf2q50"
    style="padding-bottom:0;overflow:hidden"
  >
    <img
      alt=""
      class="css-1uq6tv3"
      loading="eager"
      src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01t1jn0.jpg.webp"
      srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01t1jn0.jpg.webp 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01t1jn0.jpg.webp 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01t1jn0.jpg.webp 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01t1jn0.jpg.webp 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01t1jn0.jpg.webp 800w"
      style="aspect-ratio:auto"
    />
  </div>
</div>
`;

exports[`Canonical Articles Media Loader renders a valid container 1`] = `
<figure
  class="media-container css-1f5b20i"
  data-e2e="media-loader__container"
>
  <div
    class="css-145siv3"
    data-e2e="media-loader__placeholder"
  >
    <div
      class="css-1qgypv3"
      data-e2e="media-player__guidance"
    >
      <noscript
        class="css-lllaou"
      >
        <strong>
          Pour regarder ce contenu, veuillez activer JavaScript ou essayer un autre navigateur.
        </strong>
      </noscript>
    </div>
    <button
      class="focusIndicatorRemove css-4vlf9b"
      type="button"
    >
      <span
        class="css-m04vo2"
      >
        Play video, ""มหาวิหารน้ำแข็ง" สถาปัตยกรรมงดงามที่ธรรมชาติรังสรรค์ในสวิตเซอร์แลนด์", Durée 0,30
      </span>
      <div
        aria-hidden="true"
        class="css-d0ra4q"
      >
        <svg
          aria-hidden="true"
          class="css-vja2s5 e1s2dgdk5"
          focusable="false"
          height="12"
          viewBox="0 0 12 12"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <path
              d="M.5.6h12v12H.5z"
            />
            <path
              d="M2.144.96v11.28l8.712-5.64z"
              fill="currentColor"
            />
          </g>
        </svg>
      </div>
      <time
        aria-hidden="true"
        class="css-digyti"
        datetime="PT30S"
      >
        00:30
      </time>
    </button>
    <div
      class="css-1jf2q50"
      style="padding-bottom:0;overflow:hidden"
    >
      <img
        alt=""
        class="css-1uq6tv3"
        loading="eager"
        src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01t1jn0.jpg.webp"
        srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01t1jn0.jpg.webp 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01t1jn0.jpg.webp 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01t1jn0.jpg.webp 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01t1jn0.jpg.webp 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01t1jn0.jpg.webp 800w"
        style="aspect-ratio:auto"
      />
    </div>
  </div>
  <figcaption
    class="css-1dw163z"
    dir="ltr"
  >
    <span
      role="text"
    >
      <span
        class="css-m04vo2"
      >
        Légende vidéo, 
      </span>
      <span
        data-testid="caption-paragraph"
      >
        Running Horses
      </span>
    </span>
  </figcaption>
</figure>
`;
